Now using GameKit.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,16 +1,20 @@
 #------------------------------------------------------------------------------
 # CMakeLists.txt
-# By gnidmoo <gnidmoo@gmail.com>
+# By Quent42340 <quent42340@gmail.com>
 #------------------------------------------------------------------------------
-cmake_minimum_required(VERSION 3.0)
+cmake_minimum_required(VERSION 3.1)
 
-project(CubeLand)
+project(CubeLand VERSION 0.0.1 LANGUAGES CXX)
+
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+
+list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 
 #------------------------------------------------------------------------------
 # Get source files
 #------------------------------------------------------------------------------
-file(GLOB_RECURSE SOURCE_FILES source/*.cpp)
-file(GLOB_RECURSE HEADER_FILES include/*.hpp)
+file(GLOB_RECURSE SOURCE_FILES source/*.cpp external/*.cpp)
+file(GLOB_RECURSE HEADER_FILES include/*.hpp external/*.hpp)
 
 foreach(HEADER_FILE ${HEADER_FILES})
 	get_filename_component(HEADER_DIRECTORY ${HEADER_FILE} DIRECTORY)
@@ -18,11 +22,18 @@ foreach(HEADER_FILE ${HEADER_FILES})
 endforeach(HEADER_FILE)
 
 #------------------------------------------------------------------------------
+# Add executables
+#------------------------------------------------------------------------------
+add_executable(${CMAKE_PROJECT_NAME}
+               ${SOURCE_FILES})
+
+#------------------------------------------------------------------------------
 # Compiler flags
 #------------------------------------------------------------------------------
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -std=c++11")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wfatal-errors")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-variadic-macros")
+# target_compile_options(${CMAKE_PROJECT_NAME} PRIVATE -O3 -ffast-math)
+target_compile_options(${CMAKE_PROJECT_NAME} PRIVATE -g -Wall -Wextra -Wfatal-errors -Wno-variadic-macros)
+target_compile_options(${CMAKE_PROJECT_NAME} PRIVATE -DDEBUG_ENABLED -DDEBUG_COLOR)
+target_compile_features(${CMAKE_PROJECT_NAME} PRIVATE cxx_std_17)
 
 if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
 	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -static-libstdc++ -static-libgcc")
@@ -31,6 +42,77 @@ endif()
 #------------------------------------------------------------------------------
 # Packages
 #------------------------------------------------------------------------------
+# - gamekit
+#------------------------------------------------------------------------------
+find_package(GameKit REQUIRED)
+if(NOT GAMEKIT_FOUND)
+	message(FATAL_ERROR "gamekit is needed to build the project. Please install it correctly.")
+endif()
+
+include_directories(${GAMEKIT_INCLUDE_DIRS})
+link_directories(${GAMEKIT_LIBRARY_DIRS})
+
+#------------------------------------------------------------------------------
+# - tinyxml2
+#------------------------------------------------------------------------------
+find_package(TinyXml2 REQUIRED)
+if(NOT TINYXML2_FOUND)
+	message(FATAL_ERROR "tinyxml2 is needed to build the project. Please install it correctly.")
+endif()
+
+include_directories(${TINYXML2_INCLUDE_DIRS})
+link_directories(${TINYXML2_LIBRARY_DIRS})
+
+#------------------------------------------------------------------------------
+# - OpenGL
+#------------------------------------------------------------------------------
+set(OpenGL_GL_PREFERENCE "LEGACY")
+
+find_package(OpenGL REQUIRED)
+find_package(GLM REQUIRED)
+
+if(NOT OPENGL_FOUND)
+	message(FATAL_ERROR "OpenGL not found!")
+endif(NOT OPENGL_FOUND)
+
+if(NOT GLM_FOUND)
+	message(FATAL_ERROR "glm not found!")
+endif(NOT GLM_FOUND)
+
+include_directories(${GLM_INCLUDE_DIRS})
+
+#------------------------------------------------------------------------------
+# - SDL2, SDL2_image, SDL2_mixer, SDL2_ttf
+#------------------------------------------------------------------------------
+include(FindPkgConfig)
+
+pkg_search_module(SDL2 REQUIRED sdl2)
+pkg_search_module(SDL2IMAGE REQUIRED SDL2_image)
+pkg_search_module(SDL2MIXER REQUIRED SDL2_mixer)
+pkg_search_module(SDL2TTF REQUIRED SDL2_ttf)
+
+if(NOT SDL2_FOUND)
+	message(FATAL_ERROR "SDL2 not found!")
+endif(NOT SDL2_FOUND)
+
+if(NOT SDL2IMAGE_FOUND)
+	message(FATAL_ERROR "SDL2_image not found!")
+endif(NOT SDL2IMAGE_FOUND)
+
+if(NOT SDL2MIXER_FOUND)
+	message(FATAL_ERROR "SDL2_mixer not found!")
+endif(NOT SDL2MIXER_FOUND)
+
+if(NOT SDL2TTF_FOUND)
+	message(FATAL_ERROR "SDL2_ttf not found!")
+endif(NOT SDL2TTF_FOUND)
+
+include_directories(${SDL2_INCLUDE_DIRS}
+                    ${SDL2IMAGE_INCLUDE_DIRS}
+                    ${SDL2MIXER_INCLUDE_DIRS}
+                    ${SDL2TTF_INCLUDE_DIRS})
+
+#------------------------------------------------------------------------------
 # - SFML
 #------------------------------------------------------------------------------
 find_package(SFML COMPONENTS graphics system window REQUIRED)
@@ -38,35 +120,16 @@ find_package(SFML COMPONENTS graphics system window REQUIRED)
 include_directories(${SFML_INCLUDE_DIRS})
 
 #------------------------------------------------------------------------------
-# - libegdt
-#------------------------------------------------------------------------------
-include(ExternalProject)
-
-set(EGDT_DIR ${CMAKE_SOURCE_DIR}/external/libegdt/src/libegdt)
-
-ExternalProject_Add(libegdt
-					PREFIX external/libegdt
-					GIT_REPOSITORY http://github.com/Quent42340/libegdt.git
-					INSTALL_DIR external/include
-					INSTALL_COMMAND sh -c "echo 'n' | ln -si `find ${EGDT_DIR}/* -name *.hpp` ${CMAKE_SOURCE_DIR}/external/include > /dev/null 2>&1")
-
-include_directories(external/include)
-
-link_directories(external/libegdt/src/libegdt-build)
-
-#------------------------------------------------------------------------------
-# Add executable
-#------------------------------------------------------------------------------
-add_executable(${CMAKE_PROJECT_NAME}
-			   ${SOURCE_FILES})
-
-add_dependencies(${CMAKE_PROJECT_NAME} libegdt)
-
-#------------------------------------------------------------------------------
 # Link options
 #------------------------------------------------------------------------------
 target_link_libraries(${CMAKE_PROJECT_NAME}
-                      sfml-graphics
-                      sfml-system
-                      sfml-window
-                      egdt)
+                      ${GAMEKIT_LIBRARIES}
+                      ${TINYXML2_LIBRARIES}
+                      ${OPENGL_LIBRARIES}
+                      ${SDL2_LIBRARIES}
+                      ${SDL2IMAGE_LIBRARIES}
+                      ${SDL2MIXER_LIBRARIES}
+                      ${SDL2TTF_LIBRARIES}
+					  sfml-window
+					  sfml-graphics)
+
